<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".MainActivity"
    android:background="@color/background_app">

    <androidx.cardview.widget.CardView
        android:id="@+id/hombre"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@id/mujer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_male_symbol"
                app:tint="@color/white">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textStyle="bold"

                >

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mujer"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/hombre"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_female_symbol"
                app:tint="@color/white">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:layout_marginTop="8dp">

            </TextView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cuadroAltura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hombre"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:textColor="@color/title_text"

                >

            </TextView>

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120cm"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                >

            </TextView>
            
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/sliderHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize = "1"
                android:valueFrom = "120"
                android:valueTo = "200"
                >

            </com.google.android.material.slider.RangeSlider>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/peso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/cuadroAltura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edad"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        android:layout_marginEnd="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/title_text"

                >

            </TextView>

            <TextView
                android:id="@+id/tvPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="60"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                >

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/menosPeso"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/ic_minus"
                    >

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/masPeso"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/ic_plus"
                    >

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/edad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/cuadroAltura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/peso"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/title_text"

                >

            </TextView>

            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="60"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                >

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/menosEdad"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/ic_minus"
                    >

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/masEdad"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/ic_plus"
                    >

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    
 <Button
     android:id="@+id/calcular"
     android:layout_width="0dp"
     android:layout_height="80dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/peso"
     android:text="@string/calculate"
     android:textStyle="bold"
     app:layout_constraintVertical_bias="0.8"
     >

 </Button>


</androidx.constraintlayout.widget.ConstraintLayout>